= Changelog

== 0.7.8-dev - unreleased

* Fix: Der Wechsel einer Karte von einem Slot zu einem anderen (oder auch anderem Kartenterminal) wird jetzt korrekt dargestellt.

== 0.7.7 - 2025-05-04

* Fix: Karten mit abgelaufenen Acknowledges werden wieder korrekt im Dashboard angezeigt
* Suche nach abgelaufenen und nicht mehr benutzten Karten
* IP Mismatch bei Kartenterminals: Anzeige der IPs jetzt auch in der Fehlermeldung

== 0.7.6 - 2025-04-13

* Ruhebildschirm setzen: Feedback bei Fehlern verbessert
* Reboot KoCoBox: Feedback bei SSL-Fehlern, die einen Remote-Reboot verhindern
* Prüfung Kartenterminal, ob Remote-Management-Port für RMI verfügbar ist.
* Update auf Ruby 3.2.7
* Verbindungstest für Konnektor und Kartenterminal separat via Button möglich

== 0.7.5 - 2025-04-05

* internes Refactoring bei Funktionen für unterstützte Kartenterminals
* Fix: Aktualisierung der Notizen im Dashboard bei Änderungen
* Fix: Update der Anzeige bei Aktualisierung des TI-Lagebildes durch den Hintergrundjob
* Link und Edit-Button bei Notizen im Dashboard (Edit nur bei Owner)
* kleinere Bugfixes

== 0.7.4 - 2025-03-14

* HOTFIX: Problem beim Reinitialisieren von Tabellen behoben.

== 0.7.3 - 2025-03-14

* Übersicht Kartenterminals: Performance bei großer Anzahl von Terminals 
  verbessert (umgestellt auf server side processing)

== 0.7.2 - 2025-03-08

* Update des Ruhebildschirms (Anzeige im Display) für ORGA 6141 online Terminals
* Rebootmöglichkeit von ORGA 6141 online Terminals.
* Hinweis bei fehlendem Kontext für Konnektor und Karte.

== 0.7.0 - 2025-02-22

=== BREAKING CHANGES
