@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.2].define(version: 2025_05_07_122023) do
+ActiveRecord::Schema[7.2].define(version: 2025_05_07_152302) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -107,6 +107,7 @@ ActiveRecord::Schema[7.2].define(version: 2025_05_07_122023) do
     t.inet "current_ip"
     t.string "idle_message", default: ""
     t.datetime "rebooted_at", precision: nil
+    t.datetime "last_check", precision: nil
     t.index ["condition"], name: "index_card_terminals_on_condition"
     t.index ["connector_id"], name: "index_card_terminals_on_connector_id"
     t.index ["location_id"], name: "index_card_terminals_on_location_id"
@@ -145,6 +146,8 @@ ActiveRecord::Schema[7.2].define(version: 2025_05_07_122023) do
     t.bigint "acknowledge_id"
     t.datetime "deleted_at", precision: nil
     t.bigint "card_terminal_slot_id"
+    t.datetime "last_check", precision: nil
+    t.datetime "last_ok", precision: nil
     t.index ["card_terminal_slot_id"], name: "index_cards_on_card_terminal_slot_id", unique: true
     t.index ["condition"], name: "index_cards_on_condition"
     t.index ["iccsn"], name: "index_cards_on_iccsn", unique: true
