@@ -217,6 +217,9 @@
 <li>
 <p>Fix: Der Wechsel einer Karte von einem Slot zu einem anderen (oder auch anderem Kartenterminal) wird jetzt korrekt dargestellt.</p>
 </li>
+<li>
+<p><code>last_check</code> für Karten und Terminals (letztes Auffinden über den Konnektor)</p>
+</li>
 </ul>
 </div>
 </div>
