@@ -3,6 +3,7 @@
 == 0.7.8-dev - unreleased
 
 * Fix: Der Wechsel einer Karte von einem Slot zu einem anderen (oder auch anderem Kartenterminal) wird jetzt korrekt dargestellt.
+* `last_check` für Karten und Terminals (letztes Auffinden über den Konnektor)
 
 == 0.7.7 - 2025-05-04
 
